--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.5.0",
+    "sass": "^1.62.0",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.1",
+    "svelte-preprocess": "^5.0.3",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^4.3.0",
-    "sass": "^1.62.0",
-    "svelte-preprocess": "^5.0.3"
+    "vite": "^4.3.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "svelte-inview": "^4.0.0"
+  }
 }
