--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
+    "deploy": "node ./gh-pages.js",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/adapter-static": "^2.0.2",
     "@sveltejs/kit": "^1.5.0",
     "sass": "^1.62.0",
     "svelte": "^3.54.0",
@@ -22,6 +24,7 @@
   },
   "type": "module",
   "dependencies": {
+    "gh-pages": "^5.0.0",
     "svelte-inview": "^4.0.0"
   }
 }
