--- a/package.json
+++ b/package.json
@@ -1,30 +1,26 @@
 {
   "name": "portfolio",
-  "version": "0.0.1",
-  "private": true,
+  "version": "0.0.0",
+  "description": "",
   "scripts": {
-    "dev": "vite dev",
+    "start": "vite",
+    "dev": "vite",
     "build": "vite build",
-    "deploy": "node ./gh-pages.js",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+    "serve": "vite preview"
   },
+  "license": "",
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/adapter-static": "^2.0.2",
-    "@sveltejs/kit": "^1.5.0",
-    "sass": "^1.62.0",
-    "svelte": "^3.54.0",
-    "svelte-check": "^3.0.1",
-    "svelte-preprocess": "^5.0.3",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^4.3.0"
+    "autoprefixer": "^10.4.14",
+    "daisyui": "^3.1.6",
+    "postcss": "^8.4.24",
+    "solid-devtools": "^0.27.3",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.3",
+    "vite": "^4.3.9",
+    "vite-plugin-solid": "^2.7.0"
   },
-  "type": "module",
   "dependencies": {
-    "gh-pages": "^5.0.0",
-    "svelte-inview": "^4.0.0"
+    "@solidjs/router": "^0.8.2",
+    "solid-js": "^1.7.6"
   }
 }
